Изменения в модели Оргуструктуры
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@349 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/OrgStructure/repo/src/main/config/messages/orgstructure.properties
+++ b/OrgStructure/repo/src/main/config/messages/orgstructure.properties
@@ -1,3 +1,9 @@
+listconstraint.lecm-orgstr_employee-sex-const.MALE=Male
+listconstraint.lecm-orgstr_employee-sex-const.FEMALE=Female
+
+listconstraint.lecm-orgstr_unit-type-const.SEPARATED=Separated
+listconstraint.lecm-orgstr_unit-type-const.SEGREGATED=Segregated
+
 lecm-orgstr_organizationStructure.type.lecm-orgstr_organization-element.title=Organization Element
 lecm-orgstr_organizationStructure.type.lecm-orgstr_organization-element.description=Organization Element
 lecm-orgstr_organizationStructure.property.lecm-orgstr_element-full-name.title=Element Full Name
@@ -5,8 +11,12 @@ lecm-orgstr_organizationStructure.property.lecm-orgstr_element-full-name.descrip
 lecm-orgstr_organizationStructure.property.lecm-orgstr_element-short-name.title=Element Short Name
 lecm-orgstr_organizationStructure.property.lecm-orgstr_element-short-name.description=Element Short Name
 
-lecm-orgstr_organizationStructure.association.lecm-orgstr_element-official-assoc.title=Element Officials
-lecm-orgstr_organizationStructure.association.lecm-orgstr_element-official-assoc.description=Element Officials
+lecm-orgstr_organizationStructure.type.lecm-orgstr_organization-element-member.title=Organization Element Member
+lecm-orgstr_organizationStructure.type.lecm-orgstr_organization-element-member.description=Organization Element Member
+lecm-orgstr_organizationStructure.association.lecm-orgstr_element-member-position-assoc.title=Position
+lecm-orgstr_organizationStructure.association.lecm-orgstr_element-member-position-assoc.description=Position
+lecm-orgstr_organizationStructure.association.lecm-orgstr_element-member-employee-assoc.title=Employee
+lecm-orgstr_organizationStructure.association.lecm-orgstr_element-member-employee-assoc.description=Employee
 
 lecm-orgstr_organizationStructure.type.lecm-orgstr_organization.title=Organization
 lecm-orgstr_organizationStructure.type.lecm-orgstr_organization.description=Organization
@@ -22,8 +32,6 @@ lecm-orgstr_organizationStructure.property.lecm-orgstr_org-fax.title=Fax Numbers
 lecm-orgstr_organizationStructure.property.lecm-orgstr_org-fax.description=Fax Numbers
 lecm-orgstr_organizationStructure.property.lecm-orgstr_org-email.title=E-Mails
 lecm-orgstr_organizationStructure.property.lecm-orgstr_org-email.description=E-Mails
-lecm-orgstr_organizationStructure.property.lecm-orgstr_org-logo.title=Logo
-lecm-orgstr_organizationStructure.property.lecm-orgstr_org-logo.description=Logo
 lecm-orgstr_organizationStructure.property.lecm-orgstr_org-tin.title=TIN
 lecm-orgstr_organizationStructure.property.lecm-orgstr_org-tin.description=TIN
 lecm-orgstr_organizationStructure.property.lecm-orgstr_org-ownership-type.title=Type of ownership
@@ -32,45 +40,19 @@ lecm-orgstr_organizationStructure.property.lecm-orgstr_org-incorporation-form.ti
 lecm-orgstr_organizationStructure.property.lecm-orgstr_org-incorporation-form.description=Form of incorporation
 lecm-orgstr_organizationStructure.property.lecm-orgstr_org-founding-docs.title=Information about founding documents
 lecm-orgstr_organizationStructure.property.lecm-orgstr_org-founding-docs.description=Information about founding documents
-lecm-orgstr_organizationStructure.association.lecm-orgstr_org-structure-assoc.title=Structure
-lecm-orgstr_organizationStructure.association.lecm-orgstr_org-structure-assoc.description=Structure
+lecm-orgstr_organizationStructure.association.lecm-orgstr_org-boss-assoc.title=Boss
+lecm-orgstr_organizationStructure.association.lecm-orgstr_org-boss-assoc.description=Boss
+lecm-orgstr_organizationStructure.association.lecm-orgstr_org-logo-assoc.title=Logo
+lecm-orgstr_organizationStructure.association.lecm-orgstr_org-logo-assoc.description=Logo
 
-lecm-orgstr_organizationStructure.association.lecm-orgstr_org-staff-assoc.title=Staff List
-lecm-orgstr_organizationStructure.association.lecm-orgstr_org-staff-assoc.description=Staff List
+lecm-orgstr_organizationStructure.type.lecm-orgstr_employees.title=Employees
+lecm-orgstr_organizationStructure.type.lecm-orgstr_employees.description=Employees
 
-lecm-orgstr_organizationStructure.association.lecm-orgstr_org-projects-assoc.title=Project Register
-lecm-orgstr_organizationStructure.association.lecm-orgstr_org-projects-assoc.description=Project Register
+lecm-orgstr_organizationStructure.type.lecm-orgstr_personal-data-container.title=Personal Data
+lecm-orgstr_organizationStructure.type.lecm-orgstr_personal-data-container.description=Personal Data
 
-lecm-orgstr_organizationStructure.type.lecm-orgstr_employee-container.title=Employees Directory
-lecm-orgstr_organizationStructure.type.lecm-orgstr_employee-container.description=Employees Directory
-
-lecm-orgstr_organizationStructure.type.lecm-orgstr_personal-data-container.title=Personal Data Directory
-lecm-orgstr_organizationStructure.type.lecm-orgstr_personal-data-container.description=Personal Data Directory
-
-lecm-orgstr_organizationStructure.type.lecm-orgstr_office-container.title=Offices Directory
-lecm-orgstr_organizationStructure.type.lecm-orgstr_office-container.description=Offices Directory
-
-lecm-orgstr_organizationStructure.type.lecm-orgstr_official-container.title=Official Directory
-lecm-orgstr_organizationStructure.type.lecm-orgstr_official-container.description=Official Directory
-
-lecm-orgstr_organizationStructure.type.lecm-orgstr_workforce-container.title=Workforce Directory
-lecm-orgstr_organizationStructure.type.lecm-orgstr_workforce-container.description=Workforce Directory
-
-lecm-orgstr_organizationStructure.type.lecm-orgstr_unit-composition-container.title=Unit Composition Directory
-lecm-orgstr_organizationStructure.type.lecm-orgstr_unit-composition-container.description=Unit Composition Directory
-
-lecm-orgstr_organizationStructure.type.lecm-orgstr_project-registe.title=Project Register
-lecm-orgstr_organizationStructure.type.lecm-orgstr_project-registe.description=Project Register
-
-lecm-orgstr_organizationStructure.type.lecm-orgstr_staff-list.title=Staff List
-lecm-orgstr_organizationStructure.type.lecm-orgstr_staff-list.description=Staff List
-lecm-orgstr_organizationStructure.property.lecm-orgstr_staff-list-approval-date.title=Approval Date
-lecm-orgstr_organizationStructure.property.lecm-orgstr_staff-list-approval-date.description=Approval Date
-
-lecm-orgstr_organizationStructure.type.lecm-orgstr_organization-structure.title=Structure
-lecm-orgstr_organizationStructure.type.lecm-orgstr_organization-structure.description=Structure
-lecm-orgstr_organizationStructure.association.lecm-orgstr_org-unit-assoc.title=Units
-lecm-orgstr_organizationStructure.association.lecm-orgstr_org-unit-assoc.description=Units
+lecm-orgstr_organizationStructure.type.lecm-orgstr_structure.title=Structure
+lecm-orgstr_organizationStructure.type.lecm-orgstr_structure.description=Structure
 
 lecm-orgstr_organizationStructure.type.lecm-orgstr_organization-unit.title=Unit
 lecm-orgstr_organizationStructure.type.lecm-orgstr_organization-unit.description=Unit
@@ -78,17 +60,11 @@ lecm-orgstr_organizationStructure.property.lecm-orgstr_unit-code.title=Code
 lecm-orgstr_organizationStructure.property.lecm-orgstr_unit-code.description=Code
 lecm-orgstr_organizationStructure.property.lecm-orgstr_unit-type.title=Type
 lecm-orgstr_organizationStructure.property.lecm-orgstr_unit-type.description=Type
-lecm-orgstr_organizationStructure.property.lecm-orgstr_unii-is_exists.title=Is Exist
-lecm-orgstr_organizationStructure.property.lecm-orgstr_unii-is_exists.description=Is Exist
-lecm-orgstr_organizationStructure.association.lecm-orgstr_unit-offices-assoc.title=Officies List
-lecm-orgstr_organizationStructure.association.lecm-orgstr_unit-offices-assoc.description=Officies List
-lecm-orgstr_organizationStructure.association.lecm-orgstr_unit-composition-assoc.title=Composition List
-lecm-orgstr_organizationStructure.association.lecm-orgstr_unit-composition-assoc.description=Composition List
-lecm-orgstr_organizationStructure.association.lecm-orgstr_unit-inner-assoc.title=Sub Units
-lecm-orgstr_organizationStructure.association.lecm-orgstr_unit-inner-assoc.description=Sub Units
+lecm-orgstr_organizationStructure.association.lecm-orgstr_staff-list-assoc.title=Staff List
+lecm-orgstr_organizationStructure.association.lecm-orgstr_staff-list-assoc.description=Staff List
 
 lecm-orgstr_organizationStructure.type.lecm-orgstr_employee.title=Employee
-lecm-orgstr_organizationStructure.type.lecm-orgstr_employee.description=Employee
+lecm-orgstr_organizationStructure.typelecm-orgstr_employee.description=Employee
 lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-first-name.title=First Name
 lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-first-name.description=First Name
 lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-middle-name.title=Middle Name
@@ -107,34 +83,14 @@ lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-fio-g.title=Full
 lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-fio-g.description=Full name in genitive
 lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-fio-d.title=Full name in dativ
 lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-fio-d.description=Full name in dativ
-lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-photo.title=Photo
-lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-photo.description=Photo
-lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-is-system-user.title=System User
-lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-is-system-user.description=System User
+lecm-orgstr_organizationStructure.association.lecm-orgstr_employee-photo-assoc.title=Photo
+lecm-orgstr_organizationStructure.association.lecm-orgstr_employee-photo-assoc.description=Photo
+lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-is-system-user.title=Is System User
+lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-is-system-user.description=Is System User
 lecm-orgstr_organizationStructure.association.lecm-orgstr_employee-person-assoc.title=Account
 lecm-orgstr_organizationStructure.association.lecm-orgstr_employee-person-assoc.description=Account
 lecm-orgstr_organizationStructure.association.lecm-orgstr_employee-person-data-assoc.title=Personal Data
 lecm-orgstr_organizationStructure.association.lecm-orgstr_employee-person-data-assoc.description=Personal Data
-
-lecm-orgstr_organizationStructure.type.lecm-orgstr_position.title=Position
-lecm-orgstr_organizationStructure.type.lecm-orgstr_position.description=Position
-lecm-orgstr_organizationStructure.property.lecm-orgstr_position-name-g.title=Name in genitive
-lecm-orgstr_organizationStructure.property.lecm-orgstr_position-name-g.description=Name in genitive
-lecm-orgstr_organizationStructure.property.lecm-orgstr_position-name-d.title=Name in dative
-lecm-orgstr_organizationStructure.property.lecm-orgstr_position-name-d.description=Name in dative
-
-lecm-orgstr_organizationStructure.type.lecm-orgstr_office.title=Office
-lecm-orgstr_organizationStructure.type.lecm-orgstr_office.description=Office
-lecm-orgstr_organizationStructure.property.lecm-orgstr_office-short-name.title=Short Name
-lecm-orgstr_organizationStructure.property.lecm-orgstr_office-short-name.description=Short Name
-lecm-orgstr_organizationStructure.property.lecm-orgstr_office-phone.title=Phone
-lecm-orgstr_organizationStructure.property.lecm-orgstr_office-phone.description=Phone
-lecm-orgstr_organizationStructure.property.lecm-orgstr_office-fax.title=Fax
-lecm-orgstr_organizationStructure.property.lecm-orgstr_office-fax.description=Fax
-lecm-orgstr_organizationStructure.property.lecm-orgstr_office-address.title=Address
-lecm-orgstr_organizationStructure.property.lecm-orgstr_office-address.description=Address
-lecm-orgstr_organizationStructure.property.lecm-orgstr_office-transit-scheme.title=Transit Scheme
-lecm-orgstr_organizationStructure.property.lecm-orgstr_office-transit-scheme.description=Transit Scheme
 
 lecm-orgstr_organizationStructure.type.lecm-orgstr_personal-data.title=Personal Data
 lecm-orgstr_organizationStructure.type.lecm-orgstr_personal-data.description=Personal Data
@@ -148,39 +104,49 @@ lecm-orgstr_organizationStructure.property.lecm-orgstr_person-data-date.title=Bi
 lecm-orgstr_organizationStructure.property.lecm-orgstr_person-data-date.description=Birthday
 lecm-orgstr_organizationStructure.property.lecm-orgstr_person-data-service-id.title=Messaging service ID
 lecm-orgstr_organizationStructure.property.lecm-orgstr_person-data-service-id.description=Messaging service ID
+lecm-orgstr_organizationStructure.property.lecm-orgstr_person-data-doc-series.title=Document Series
+lecm-orgstr_organizationStructure.property.lecm-orgstr_person-data-doc-series.description=Document Series
+lecm-orgstr_organizationStructure.property.lecm-orgstr_person-data-doc-number.title=Document Number
+lecm-orgstr_organizationStructure.property.lecm-orgstr_person-data-doc-number.description=Document Number
 
-lecm-orgstr_organizationStructure.type.lecm-orgstr_project.title=Project
-lecm-orgstr_organizationStructure.type.lecm-orgstr_project.description=Project
-lecm-orgstr_organizationStructure.property.lecm-orgstr_project-target.title=Targets
-lecm-orgstr_organizationStructure.property.lecm-orgstr_project-target.description=Targets
-lecm-orgstr_organizationStructure.property.lecm-orgstr_project-schedule.title=Schedule
-lecm-orgstr_organizationStructure.property.lecm-orgstr_project-schedule.description=Schedule
-lecm-orgstr_organizationStructure.association.lecm-orgstr_project-workforce-assoc.title=Workforce List
-lecm-orgstr_organizationStructure.association.lecm-orgstr_project-workforce-assoc.description=Workforce List
+lecm-orgstr_organizationStructure.type.lecm-orgstr_workGroup.title=Working Group
+lecm-orgstr_organizationStructure.type.lecm-orgstr_workGroup.description=Project
+lecm-orgstr_organizationStructure.property.lecm-orgstr_workGroup-description.title=Description
+lecm-orgstr_organizationStructure.property.lecm-orgstr_workGroup-description.description=Description
 
 lecm-orgstr_organizationStructure.type.lecm-orgstr_workforce.title=Workforce
 lecm-orgstr_organizationStructure.type.lecm-orgstr_workforce.description=Workforce
-lecm-orgstr_organizationStructure.property.lecm-orgstr_workforce-role.title=Role
-lecm-orgstr_organizationStructure.property.lecm-orgstr_workforce-role.description=Role
-lecm-orgstr_organizationStructure.association.lecm-orgstr_workforce-employee-assoc.title=Employee
-lecm-orgstr_organizationStructure.association.lecm-orgstr_workforce-employee-assocc.description=Employee
+lecm-orgstr_organizationStructure.property.lecm-orgstr_workforce-comment.title=Comment
+lecm-orgstr_organizationStructure.property.lecm-orgstr_workforce-comment.description=Comment
 
-lecm-orgstr_organizationStructure.type.lecm-orgstr_unit-composition.title=Unit Composition
-lecm-orgstr_organizationStructure.type.lecm-orgstr_unit-composition.description=Unit Composition
-lecm-orgstr_organizationStructure.property.lecm-orgstr_composition-is-boss.title=Is Boss
-lecm-orgstr_organizationStructure.property.lecm-orgstr_composition-is-boss.description=Is Boss
-lecm-orgstr_organizationStructure.property.lecm-orgstr_composition-is-primary.title=Is Mandatory
-lecm-orgstr_organizationStructure.property.lecm-orgstr_composition-is-primary.description=Is Mandatory
-lecm-orgstr_organizationStructure.association.lecm-orgstr_composition-position-assoc.title=Position
-lecm-orgstr_organizationStructure.association.lecm-orgstr_composition-position-assoc.description=Position
-lecm-orgstr_organizationStructure.association.lecm-orgstr_composition-employee-assoc.title=Employee
-lecm-orgstr_organizationStructure.association.lecm-orgstr_composition-employee-assoc.description=Employee
+lecm-orgstr_organizationStructure.type.lecm-orgstr_staff-list.title=Staff List
+lecm-orgstr_organizationStructure.type.lecm-orgstr_staff-list.description=Staff List
+lecm-orgstr_organizationStructure.property.lecm-orgstr_staff-list-is-boss.title=Is Boss
+lecm-orgstr_organizationStructure.property.lecm-orgstr_staff-list-is-boss.description=Is Boss
 
-listconstraint.lecm-orgstr_employee-sex-const.MALE=Male
-listconstraint.lecm-orgstr_employee-sex-const.FEMALE=Female
+lecm-orgstr_organizationStructure.type.lecm-orgstr_employee-link.title=Employee
+lecm-orgstr_organizationStructure.type.lecm-orgstr_employee-link.description=Employee
+lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-link-is-primary.title=Is Primary
+lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-link-is-primary.description=Is Primary
+lecm-orgstr_organizationStructure.association.lecm-orgstr_employee-link-employee-assoc.title=Employee
+lecm-orgstr_organizationStructure.association.lecm-orgstr_employee-link-employee-assoc.description=Employee
 
-listconstraint.lecm-orgstr_unit-type-const.SEPARATED=Separated
-listconstraint.lecm-orgstr_unit-type-const.SEGREGATED=Segregated
+lecm-orgstr_organizationStructure.type.lecm-orgstr_staffPosition.title=Position
+lecm-orgstr_organizationStructure.type.lecm-orgstr_staffPosition.description=Position
+lecm-orgstr_organizationStructure.property.lecm-orgstr_staffPosition-name-g.title=Name in genitive
+lecm-orgstr_organizationStructure.property.lecm-orgstr_staffPosition-name-g.description=Name in genitive
+lecm-orgstr_organizationStructure.property.lecm-orgstr_staffPosition-name-d.title=Name in dative
+lecm-orgstr_organizationStructure.property.lecm-orgstr_staffPosition-name-d.description=Name in dative
+lecm-orgstr_organizationStructure.property.lecm-orgstr_staffPosition-code.title=Code
+lecm-orgstr_organizationStructure.property.lecm-orgstr_staffPosition-code.description=Code
+
+lecm-orgstr_organizationStructure.type.lecm-orgstr_workRole.title=Role
+lecm-orgstr_organizationStructure.type.lecm-orgstr_workRole.description=Role
+lecm-orgstr_organizationStructure.property.lecm-orgstr_workRole-description.title=Description
+lecm-orgstr_organizationStructure.property.lecm-orgstr_workRole-description.description=Description
+
+lecm-orgstr-docType_dictionaryDocTypes.type.lecm-orgstr-docType_documentType.title=Doc Type
+lecm-orgstr-docType_dictionaryDocTypes.type.lecm-orgstr-docType_documentType.description=Doc Type
 
 
 
