--- a/OrgStructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/orgstructure.menu.get.properties
+++ b/OrgStructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/orgstructure.menu.get.properties
@@ -1,4 +1,5 @@
 lecm.orgstructure.structure.btn=Structure
-lecm.orgstructure.project_register.btn=Project Register
+lecm.orgstructure.work_groups.btn=Working groups
 lecm.orgstructure.employees.btn=Employees
 lecm.orgstructure.staff_list.btn=Staff List
+lecm.orgstructure.roles.btn=Project Roles
