Внешний вид кнопки экспорта в списке справочников
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@357 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/all/datagrid/datagrid.get.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/all/datagrid/datagrid.get.properties
@@ -30,6 +30,7 @@ message.empty=No list items
 ## Actions
 actions.view=View
 actions.edit=Edit
+actions.export-xml=Export to XML
 actions.duplicate-row=Duplicate
 actions.delete-row=Delete
 actions.version=Preview Version
