Редактор машины состояний
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@358 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/repo/src/main/config/messages/lecm-statemachine.properties
+++ b/lecm-base/repo/src/main/config/messages/lecm-statemachine.properties
@@ -6,3 +6,8 @@ listconstraint.lecm-statemachine_statuses.ON_REFINING=On Refining
 listconstraint.lecm-statemachine_statuses.ON_SIGNING=On Signing
 listconstraint.lecm-statemachine_statuses.CANCELED=Canceled
 listconstraint.lecm-statemachine_statuses.SIGNED=Signed
+
+statemachine.action.StatusChange=Status Change
+statemachine.action.FinishStateWithTransition=Finish State with Transition
+statemachine.action.StartWorkflow=Start Workflow
+statemachine.action.WaitForDocumentChange=Wait for Document Change
