кастомизировал вид формы для создания/редактирования доверенностей
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@360 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/delegation/center.get.properties
+++ b/lecm-delegation/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/delegation/center.get.properties
@@ -28,8 +28,8 @@ message.error=Could not access the Data List
 message.empty=No list items
 
 ## Actions
-actions.view=View
-actions.edit=Edit
-actions.duplicate-row=Duplicate
-actions.delete-row=Delete
-actions.more=More
+actions.edit=Edit procuracy
+actions.delete=Delete procuracy
+actions.revoke=Revoke procuracy
+actions.propogate=Propogate procuracy
+actions.more=More actions
