изменен UI в Оргструктуре
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@361 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/OrgStructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/OrgStructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -16,3 +16,8 @@ message.delete.failure=Could not delete unit
 page.orgstructure=Orgstructure
 
 search-block=Search
+
+structure.btn=Structure
+stafflist.btn=Staff List
+employees.btn=Employees
+workgroups.btn=Working Groups
