--- a/OrgStructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/orgstructure.tree.get.properties
+++ b/OrgStructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/orgstructure.tree.get.properties
@@ -2,3 +2,5 @@ message.delete.unit.success=Unit was successful deleted
 message.delete.unit.failure.has.children=Cannot delete unit. It has children units
 message.delete.unit.failure.has.composition=Cannot delete unit. It has employeeys in compositions
 message.delete.unit.error=Some error occured
+
+dialog.edit.title=Edit
