Импорт. Добавлен импорт CSV.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@367 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar.get.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar.get.properties
@@ -4,6 +4,8 @@ button.rss-feed=RSS Feed
 button.export=Export
 button.import=Import
 button.search=Search
+button.import-xml=Upload XML
+button.import-csv=Upload CSV
 
 label.new-row.title=Create New Item
 
