Импорт CSV. Изменены иконки кнопок. Кнопка импорта активируется только при выборе значения в таблице.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@386 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar.get.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar.get.properties
@@ -1,11 +1,11 @@
 button.new-row=New Item
 button.print=Print
 button.rss-feed=RSS Feed
-button.export=Export
-button.import=Import
 button.search=Search
-button.import-xml=Upload XML
-button.import-csv=Upload CSV
+button.export-xml=Export XML
+button.import-xml=Import XML
+button.export-csv=Export CSV
+button.import-csv=Import CSV
 
 label.new-row.title=Create New Item
 
