ALF-39 Справочник Организации [~]доработан UI (восстановлены действия на дереве, добавлено сообщение о загрузке) [~]исправлен полнотекстовый поиск [~рефакторинг
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@391 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/OrgStructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/OrgStructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -14,10 +14,12 @@ message.delete.success=Unit was deleted
 message.delete.failure=Could not delete unit
 
 page.orgstructure=Orgstructure
-
+page.orgstructure.filter.label=(content filtered)
 search-block=Search
 
 structure.btn=Structure
 stafflist.btn=Staff List
 employees.btn=Employees
 workgroups.btn=Working Groups
+
+dialog.edit.title=Edit
