Импорт XML на странице списка справочников; +рефакторинг
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@401 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar.get.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar.get.properties
@@ -23,3 +23,5 @@ menu.selected-items=Selected Items...
 menu.selected-items.duplicate=Duplicate
 menu.selected-items.delete=Delete
 menu.selected-items.deselect-all=Deselect All
+
+logicecm.dictionary.add-element=Add element
