--- a/OrgStructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/orgstructure.toolbar.get.properties
+++ b/OrgStructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/orgstructure.toolbar.get.properties
@@ -1,5 +1,6 @@
 button.new-row=New Item
-
+button.search=Search
+button.ex_search=Extend Search
 label.new-row.title=Create New Item
 
 message.new-row.success=Successfully added new item
