настройка кастомных контролов настройка i18n
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@428 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/repo/src/main/config/messages/delegation.properties
+++ b/lecm-delegation/repo/src/main/config/messages/delegation.properties
@@ -1,8 +1,22 @@
-lecm-dlg_delegationModel.title=Example Custom delegation model
-lecm-dlg_delegationModel.description=This is custom delegation model, it is a dummy model with one type for testing
-lecm-dlg_delegationModel.type.lecm-dlg_test-unit.title=Example custom delegation data type
-lecm-dlg_delegationModel.type.lecm-dlg_test-unit.description=This is an example custom data type declared in delegation model
-lecm-dlg_delegationModel.property.lecm-dlg_testUnitId.title=Unique identifier
-lecm-dlg_delegationModel.property.lecm-dlg_testUnitName.title=Name
-lecm-dlg_delegationModel.property.lecm-dlg_testUnitTitle.title=Title
-lecm-dlg_delegationModel.property.lecm-dlg_testUnitDate.title=Datetime
+# <model name="lecm-ba:delegations">
+lecm-ba_delegations.title=Business Authority Delegation Model
+
+# <constraint name="lecm-ba:statusList">
+listconstraint.lecm-ba_statusList.NEW=new
+listconstraint.lecm-ba_statusList.ACTIVE=active
+listconstraint.lecm-ba_statusList.REVOKED=revoked
+listconstraint.lecm-ba_statusList.CLOSED=closed
+
+# <type name="lecm-ba:procuracy">
+lecm-ba_delegations.type.lecm-ba_procuracy.title=Procuracy to delegate
+lecm-ba_delegations.property.lecm-ba_dateUTCBegin.title=Start date
+lecm-ba_delegations.property.lecm-ba_dateUTCEnd.title=Expire date
+lecm-ba_delegations.property.lecm-ba_allFunctions.title=All functions
+lecm-ba_delegations.property.lecm-ba_comment.title=Comment and details
+lecm-ba_delegations.property.lecm-ba_canpropogate.title=Can propogate
+lecm-ba_delegations.property.lecm-ba_dateUTCRevoke.title=Revoke date
+lecm-ba_delegations.property.lecm-ba_status.title=Status
+lecm-ba_delegations.association.lecm-ba_fromEmployee.title=Delegating person
+lecm-ba_delegations.association.lecm-ba_toEmployee.title=Trustee person
+lecm-ba_delegations.association.lecm-ba_delegateRoles.title=Delegated roles
+lecm-ba_delegations.association.lecm-ba_parentProcuracy.title=Parent procuracy
