переименован модуль Оргструктура
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@430 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
 
     <modules>
         <module>lecm-base</module>
-        <module>OrgStructure</module>
+        <module>lecm-orgstructure</module>
         <module>lecm-experts</module>
         <module>lecm-jasperreports-forms</module>
 	    <module>lecm-dictionary</module>
