--- a/lecm-delegation/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/delegation/center.get.properties
+++ b/lecm-delegation/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/delegation/center.get.properties
@@ -30,4 +30,6 @@ message.empty=No list items
 ## Actions
 actions.edit=Edit procuracy
 actions.delete=Delete procuracy
+actions.revoke=Revoke procuracy
+actions.propogate=Propogate procuracy
 actions.more=More actions
