git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@437 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/delegation/delegation-toolbar.get.properties
+++ b/lecm-delegation/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/delegation/delegation-toolbar.get.properties
@@ -1,6 +1,7 @@
 button.new-row=New Item
 button.print=Print
 button.rss-feed=RSS Feed
+button.search=Search
 
 label.new-row.title=Create New Item
 
