--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -1,25 +1,12 @@
-button.new-composition=New Composition
-button.new-workforce=New Workforce
-control.table.column.employee.title=Employee
-control.table.column.position.title=Position
-control.table.column.boss.title=Is Boss
-control.table.column.primary.title=Is Primary
-control.table.column.actions.title=Actions
-control.table.column.role.title=Role
-message.new-element.success=New element added
-message.new-element.failure=New element added failure
-message.confirm.delete.title=Delete Item
-message.confirm.delete.description=Are you sure you want to delete this item?
-message.delete.success=Unit was deleted
-message.delete.failure=Could not delete unit
-
 page.orgstructure=Orgstructure
+page.organization=Organization
+page.org-positions=Positions
+page.org-roles=Roles
+page.org-employees=Employees
+page.staff-list=Staff List
+page.work-groups=Working Groups
 page.orgstructure.filter.label=(content filtered)
-search-block=Search
 
-structure.btn=Structure
-stafflist.btn=Staff List
-employees.btn=Employees
-workgroups.btn=Working Groups
+search-block=Search
 
 dialog.edit.title=Edit
