[~] Редактор машины состояний
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@447 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/statemachine/editor/statemachine.main.get.properties
+++ b/lecm-statemachine-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/statemachine/editor/statemachine.main.get.properties
@@ -1,8 +1,6 @@
 statemachine.editor.expression=Actions for start State
 statemachine.editor.transition=Transition
-statemachine.editor.appendstatus=Append Status
-statemachine.editor.machineproperties=Properties
 
 statemachine.execution.start=Actions for start State
 statemachine.execution.take=User Actions
-statemachine.execution.end=Actions for end State
+statemachine.execution.end=Actions for start State
