--- a/BusinessCalendar/repo/pom.xml
+++ b/BusinessCalendar/repo/pom.xml
@@ -49,7 +49,7 @@
     <dependencies>
         <dependency>
             <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
+	        <artifactId>com.springsource.org.json</artifactId>
         </dependency>
         <dependency>
             <groupId>org.alfresco</groupId>
