--- a/lecm-dictionary/repo/pom.xml
+++ b/lecm-dictionary/repo/pom.xml
@@ -55,7 +55,7 @@
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
+	        <artifactId>com.springsource.org.json</artifactId>
         </dependency>
         <dependency>
             <groupId>org.alfresco</groupId>
