--- a/lecm-experts/repo/pom.xml
+++ b/lecm-experts/repo/pom.xml
@@ -56,7 +56,7 @@
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
+	        <artifactId>com.springsource.org.json</artifactId>
         </dependency>
         <dependency>
             <groupId>org.alfresco</groupId>
