--- a/lecm-orgstructure/repo/pom.xml
+++ b/lecm-orgstructure/repo/pom.xml
@@ -48,7 +48,7 @@
     <dependencies>
         <dependency>
             <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
+	        <artifactId>com.springsource.org.json</artifactId>
         </dependency>
         <dependency>
             <groupId>org.alfresco</groupId>
