--- a/pom.xml
+++ b/pom.xml
@@ -176,12 +176,11 @@
                 <version>2.8.0</version>
                 <scope>provided</scope>
             </dependency>
-            <dependency>
-                <groupId>org.json</groupId>
-                <artifactId>json</artifactId>
-                <version>20070829</version>
-                <scope>provided</scope>
-            </dependency>
+	        <dependency>
+		        <groupId>org.json</groupId>
+		        <artifactId>com.springsource.org.json</artifactId>
+		        <version>1.0.0</version>
+	        </dependency>
             <dependency>
                 <groupId>org.activiti</groupId>
                 <artifactId>activiti-engine</artifactId>
