--- a/lecm-delegation/repo/src/main/config/messages/delegation.properties
+++ b/lecm-delegation/repo/src/main/config/messages/delegation.properties
@@ -20,3 +20,41 @@ lecm-ba_delegations.association.lecm-ba_fromEmployee.title=Delegating person
 lecm-ba_delegations.association.lecm-ba_toEmployee.title=Trustee person
 lecm-ba_delegations.association.lecm-ba_delegateRoles.title=Delegated roles
 lecm-ba_delegations.association.lecm-ba_parentProcuracy.title=Parent procuracy
+
+#<model name="lecm-br:businessRoleModel">
+lecm-br_business-role-model.title=Business Role Model
+
+#<type name="lecm-br:business-role-container">
+lecm-br_business-role-model.type.lecm-br_business-role-container.title=Collection of business roles
+lecm-br_business-role-model.association.lecm-br_business-role-assoc.title=Link to business role
+
+#<type name="lecm-br:business-role">
+lecm-br_business-role-model.type.lecm-br_business-role.title=Business role
+lecm-br_business-role-model.property.lecm-br_business-role-name.title=Business role name
+
+#<model name="lecm-d8n:delegationModel">
+lecm-d8n_delegation-model.title=Business Authority Delegation Model
+
+#<constraint name="lecm-d8n:delegation-opts-status-constraint" type="LIST">
+listconstraint.lecm-d8n_delegation-opts-status-constraint.NEW=new delegation
+listconstraint.lecm-d8n_delegation-opts-status-constraint.ACTIVE=active delegation
+listconstraint.lecm-d8n_delegation-opts-status-constraint.REVOKED=revoked delegation
+listconstraint.lecm-d8n_delegation-opts-status-constraint.CLOSED=closed delegation
+listconstraint.lecm-d8n_delegation-opts-status-constraint.NOT_SET=delegation not set
+
+#<type name="lecm-d8n:delegation-opts-container">
+lecm-d8n_delegation-model.type.lecm-d8n_delegation-opts-container.title=Collection of delegation options
+lecm-d8n_delegation-model.asssociation.lecm-d8n_delegation-opts-assoc.title=Link to delegation options
+
+#<type name="lecm-d8n:procuracy">
+lecm-d8n_delegation-model.type.lecm-d8n_procuracy.title=Procuracy
+lecm-d8n_delegation-model.asssociation.lecm-d8n_business-role-assoc.title=Link to business role
+lecm-d8n_delegation-model.asssociation.lecm-d8n_trustee-assoc.title=Link to trustee employee
+
+#<type name="lecm-d8n:delegation-opts">
+lecm-d8n_delegation-model.type.lecm-d8n_delegation-opts.title=Delegation options
+lecm-d8n_delegation-model.property.lecm-d8n_delegation-opts-can-transfer-rights.title=Transfer rights to subordinate documents
+lecm-d8n_delegation-model.property.lecm-d8n_delegation-opts-can-delegate-all.title=Delegate all functions
+lecm-d8n_delegation-model.property.lecm-d8n_delegation-opts-status.title=Status
+lecm-d8n_delegation-model.asssociation.lecm-d8n_delegation-opts-owner-assoc.title=Link to owner employee
+lecm-d8n_delegation-model.asssociation.lecm-d8n_delegation-opts-procuracy-assoc.title=Link to procucaties
