переделал страницу делегирования по канонам верстки (заюзал всякие стандартные макросы) начал делать страницу с перечнем делегирования
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@505 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
+++ b/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
@@ -1,2 +1,5 @@
 page.delegation.title=Delegation
+page.delegation.description=Delegation
 page.delegation.filteredLabel=(content filtered)
+page.delegation-opts.title=Delegation options
+page.delegation-opts.filteredLabel=(content filtered)
