--- a/lecm-delegation/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/delegation/delegation-toolbar.get.properties
+++ b/lecm-delegation/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/delegation/delegation-toolbar.get.properties
@@ -2,6 +2,7 @@ button.new-row=New Item
 button.print=Print
 button.rss-feed=RSS Feed
 button.search=Search
+button.ex_search=Extend Search
 
 label.new-row.title=Create New Item
 
