доработки в модели Оргструктуры 1. Свойство "Описание(должностные обязанности)" для Штатного расписания 2. Скрытые поля "Должности" и "Роли" для Сотрудника
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@519 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/repo/src/main/config/messages/orgstructure.properties
+++ b/lecm-orgstructure/repo/src/main/config/messages/orgstructure.properties
@@ -91,6 +91,10 @@ lecm-orgstr_organizationStructure.association.lecm-orgstr_employee-person-assoc.
 lecm-orgstr_organizationStructure.association.lecm-orgstr_employee-person-assoc.description=Account
 lecm-orgstr_organizationStructure.association.lecm-orgstr_employee-person-data-assoc.title=Personal Data
 lecm-orgstr_organizationStructure.association.lecm-orgstr_employee-person-data-assoc.description=Personal Data
+lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-positions.title=Positions
+lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-positions.description=Positions
+lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-roles.title=Roles
+lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-roles.description=Roles
 
 lecm-orgstr_organizationStructure.type.lecm-orgstr_personal-data.title=Personal Data
 lecm-orgstr_organizationStructure.type.lecm-orgstr_personal-data.description=Personal Data
@@ -123,6 +127,8 @@ lecm-orgstr_organizationStructure.type.lecm-orgstr_staff-list.title=Staff List
 lecm-orgstr_organizationStructure.type.lecm-orgstr_staff-list.description=Staff List
 lecm-orgstr_organizationStructure.property.lecm-orgstr_staff-list-is-boss.title=Is Boss
 lecm-orgstr_organizationStructure.property.lecm-orgstr_staff-list-is-boss.description=Is Boss
+lecm-orgstr_organizationStructure.property.lecm-orgstr_staff-list-description.title=Description
+lecm-orgstr_organizationStructure.property.lecm-orgstr_staff-list-description.description=Description
 
 lecm-orgstr_organizationStructure.type.lecm-orgstr_employee-link.title=Employee
 lecm-orgstr_organizationStructure.type.lecm-orgstr_employee-link.description=Employee
