--- a/lecm-delegation/repo/src/main/config/messages/delegation.properties
+++ b/lecm-delegation/repo/src/main/config/messages/delegation.properties
@@ -44,17 +44,17 @@ listconstraint.lecm-d8n_delegation-opts-status-constraint.NOT_SET=delegation not
 
 #<type name="lecm-d8n:delegation-opts-container">
 lecm-d8n_delegation-model.type.lecm-d8n_delegation-opts-container.title=Collection of delegation options
-lecm-d8n_delegation-model.asssociation.lecm-d8n_delegation-opts-assoc.title=Link to delegation options
+lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-assoc.title=Link to delegation options
 
 #<type name="lecm-d8n:procuracy">
 lecm-d8n_delegation-model.type.lecm-d8n_procuracy.title=Procuracy
-lecm-d8n_delegation-model.asssociation.lecm-d8n_business-role-assoc.title=Link to business role
-lecm-d8n_delegation-model.asssociation.lecm-d8n_trustee-assoc.title=Link to trustee employee
+lecm-d8n_delegation-model.association.lecm-d8n_business-role-assoc.title=Link to business role
+lecm-d8n_delegation-model.association.lecm-d8n_trustee-assoc.title=Link to trustee employee
 
 #<type name="lecm-d8n:delegation-opts">
 lecm-d8n_delegation-model.type.lecm-d8n_delegation-opts.title=Delegation options
 lecm-d8n_delegation-model.property.lecm-d8n_delegation-opts-can-transfer-rights.title=Transfer rights to subordinate documents
 lecm-d8n_delegation-model.property.lecm-d8n_delegation-opts-can-delegate-all.title=Delegate all functions
 lecm-d8n_delegation-model.property.lecm-d8n_delegation-opts-status.title=Status
-lecm-d8n_delegation-model.asssociation.lecm-d8n_delegation-opts-owner-assoc.title=Link to owner employee
-lecm-d8n_delegation-model.asssociation.lecm-d8n_delegation-opts-procuracy-assoc.title=Link to procucaties
+lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-owner-assoc.title=Link to owner employee
+lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-procuracy-assoc.title=Link to procucaties
