[~] Редактор машины состояний
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@528 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor.properties
+++ b/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor.properties
@@ -6,3 +6,10 @@ statemachine.editor.machineproperties=Properties
 statemachine.execution.start=Actions for start State
 statemachine.execution.take=User Actions
 statemachine.execution.end=Actions for end State
+
+label.column.actions=Actions
+## Actions
+actions.edit=Edit
+actions.delete-row=Delete
+
+#model
