Добавлен тестовый справочник для контролов оргструктуры
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@531 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary-test/repo/src/main/config/messages/dictionary-test.properties
+++ b/lecm-dictionary-test/repo/src/main/config/messages/dictionary-test.properties
@@ -5,3 +5,9 @@ lecm-dic-test_dictionaryTest.association.lecm-dic-test_regOneTree.title=Region, 
 lecm-dic-test_dictionaryTest.association.lecm-dic-test_regManyTree.title=Region, many, pop-up window
 lecm-dic-test_dictionaryTest.association.lecm-dic-test_addressOneTree.title=Address, one, pop-up window
 lecm-dic-test_dictionaryTest.association.lecm-dic-test_addressManyTree.title=Address, many, pop-up window
+
+lecm-dic-orgstr-test_dictionaryOrgstructureTest.association.lecm-dic-orgstr-test_organization-unit.title=Organization unit
+lecm-dic-orgstr-test_dictionaryOrgstructureTest.association.lecm-dic-orgstr-test_position.title=Position
+lecm-dic-orgstr-test_dictionaryOrgstructureTest.association.lecm-dic-orgstr-test_workGroup.title=Work group
+lecm-dic-orgstr-test_dictionaryOrgstructureTest.association.lecm-dic-orgstr-test_employee.title=Employee
+lecm-dic-orgstr-test_dictionaryOrgstructureTest.association.lecm-dic-orgstr-test_workRole.title=Work role
