--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.toolbar.get.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.toolbar.get.properties
@@ -1,6 +1,7 @@
 button.new-row=New Item
 button.search=Search
 button.ex_search=Extend Search
+button.new-row-staff=New Item
 label.new-row.title=Create New Item
 
 message.new-row.success=Successfully added new item
