[~] ALF-181. Перегруппировка настроек в статусе
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@564 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/repo/src/main/config/messages/lecm-statemachine.properties
+++ b/lecm-base/repo/src/main/config/messages/lecm-statemachine.properties
@@ -11,3 +11,4 @@ statemachine.action.StatusChange=Status Change
 statemachine.action.FinishStateWithTransition=Finish State with Transition
 statemachine.action.StartWorkflow=Start Workflow
 statemachine.action.WaitForDocumentChange=Wait for Document Change
+statemachine.action.UserWorkflow=Start Process
