--- a/lecm-statemachine-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/statemachine/editor/statemachine.main.get.properties
+++ b/lecm-statemachine-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/statemachine/editor/statemachine.main.get.properties
@@ -2,5 +2,6 @@ statemachine.editor.expression=Actions for start State
 statemachine.editor.transition=Transition
 
 statemachine.execution.start=Actions for start State
-statemachine.execution.take=User Actions
+statemachine.execution.user=User Actions
 statemachine.execution.end=Actions for start State
+statemachine.execution.transition=Transitions to other statuses
