заготовка под страницу с делегированием бизнес-ролей
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@565 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
+++ b/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
@@ -3,3 +3,6 @@ page.delegation.description=Delegation
 page.delegation.filteredLabel=(content filtered)
 page.delegation-opts.title=Delegation options
 page.delegation-opts.filteredLabel=(content filtered)
+page.procuracy.title=Procuracy
+page.procuracy.description=Procuracy
+page.procuracy.filteerdLabel=(content filtered)
