добавил в меню пользователя ссылку на страницу с доверенностями
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@566 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
+++ b/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
@@ -1,3 +1,6 @@
+header.delegation.description=Delegation
+header.my-procuracy.label=My procuracies
+
 page.delegation.title=Delegation
 page.delegation.description=Delegation
 page.delegation.filteredLabel=(content filtered)
