навел порядок среди названий страниц
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@574 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
+++ b/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
@@ -1,11 +1,11 @@
-header.delegation.description=Delegation
-header.my-procuracy.label=My procuracies
+header.delegation-list.description=Delegation list
+page.delegation-list.title=Delegation list
+page.delegation-list.filteredLabel=(content filtered)
 
-page.delegation.title=Delegation
-page.delegation.description=Delegation
-page.delegation.filteredLabel=(content filtered)
+header.my-delegation-opts.label=Delegation options
 page.delegation-opts.title=Delegation options
 page.delegation-opts.filteredLabel=(content filtered)
-page.procuracy.title=Procuracy
-page.procuracy.description=Procuracy
-page.procuracy.filteerdLabel=(content filtered)
+
+header.delegation.description=Delegation
+page.delegation.title=Delegation
+page.delegation.filteredLabel=(content filtered)
