Orgstructure  : profile : tabs
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@576 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -10,3 +10,6 @@ page.orgstructure.filter.label=(content filtered)
 search-block=Search
 
 dialog.edit.title=Edit
+
+info.main=Information
+info.more=More
